# AI_Assistant

./: .gitignore  Dockerfile  FEATURES.md  RAG优化清单.md  README.md  TODO.md  ZhipuAi.py  deepSeek-V4.py  docker-compose.yml  pyproject.toml  start.bat
.claude/: CLAUDE.md  settings.local.json
data/: md5_store.json  test.pptx  test_reimburse.pptx  test_work.pptx
data/documents/: 6ec8f6932a2f.docx  cf29d278d2f7.docx  ec1ca0ea7a63.docx  test_slides.pptx
docs/: AI_Assistant RAG 系统深度评价报告.md  ARCHITECTURE.md  Bug_Fix_20260530.md  RAG优化清单.md  Rerank模型选择.md  chunk-strategies.md  claude-code-tutorial.md  optimization-notes.md  上下文管理优化.md  企业级 RAG 开发-核心功能与技术全景.md  长文档和大知识库.md
prompts/: assistant.yaml  system.yaml
prompts/agent/: react.yaml
prompts/rag/: query.yaml
scripts/: V20260522.01__create_t_document.sql  V20260528.01__storage_optimization.sql  download_models.py  generate_test_data.py  init_pgvector.sql  seed_data.py  show_errors.py  test_api.py  test_pg_connection.py
src/: config.py
src/api/: deps.py  main.py  middleware.py  schemas.py
src/api/routes/: auth.py  (+8 more)
src/knowledge/: __init__.py  embeddings.py  index_store.py  ingestion.py  query_engine.py  reranker.py  retrieval.py  tokenizer.py
src/llm/: __init__.py  base.py  router.py
src/observability/: logging_config.py  tracing.py
src/parsing/: __init__.py  chunker.py  cloud_parse.py  image_parser.py  loader.py  ocr.py  office_parser.py  pdf_markdown.py  pdf_text.py  text_parser.py
src/storage/: __init__.py  cache.py
src/utils/: prompt_loader.py  ssl_utils.py  summarizer.py  trim_messages.py
tests/: conftest.py
tests/test_api/: test_chat.py  test_health.py
tests/test_knowledge/: test_cache.py  test_embeddings.py  test_index_store.py  test_query_api.py  test_reranker.py
(+9 files in other folders)
